--- a/style.css
+++ b/style.css
@@ -23,3 +23,41 @@ font-family: Merriweather;
 font-size: 72px;
 
 }
+
+.OFF{
+color: #F00;
+text-align: center;
+font-family: Inter;
+font-size: 88px;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+}
+
+.DEALS{
+color: #F00;
+text-align: center;
+font-family: Inter;
+font-size: 24px;
+font-style: normal;
+font-weight: 500;
+line-height: normal;
+}
+
+.CATEGORIES{
+    color: #070211;
+    text-align: center;
+    font-family: Inter;
+    font-size: 48px;
+    font-style: normal;
+    font-weight: 700;
+    line-height: normal;    
+}
+
+.new-year-photo{
+width: 810px;
+height: 500px;
+display: block;
+margin-left: auto;
+margin-right: auto;
+}
