--- a/style.css
+++ b/style.css
@@ -61,3 +61,61 @@ display: block;
 margin-left: auto;
 margin-right: auto;
 }
+.bannar{
+
+background-image: url('../Assignment-1/images/Vectorrr.png');
+padding: 20px 35px 0px 150px;
+margin-top: 120px;
+display:flex ;
+align-items: center;
+justify-content: space-between;
+
+}
+.banner .group-pic70{
+    width: 500px;
+   
+}
+
+.Welcome{
+    color: #FFF;
+    font-family: Merriweather;
+    font-size: 64px;
+    font-style: normal;
+    font-weight: 900;
+   
+}
+
+.banner-content{
+max-width: 500px;
+}
+.about{
+    color: rgba(255, 255, 255, 0.80);
+font-family: Inter;
+font-size: 17px;
+font-style: normal;
+font-weight: 400;
+line-height: 30px;
+}
+
+.primary-button{
+    border-radius: 5px;
+    background: #ff0000;
+    border: 0;
+    color: white;
+    font-size: 20px;
+    font-weight: 700;
+    padding: 15px 35px;
+}
+.Place-bnnar{
+    width: 1320px;
+    height: 340px;
+    margin-top: 100px;
+    padding-top: 100px;
+    font-size: 32px;
+    background-image: linear-gradient(180deg, rgba(255, 0, 0, 0.10) 0%, rgba(255, 0, 0, 0.00) 100%);
+    text-align: center;
+}
+
+.point-color{
+    color: #F00;
+}
